[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
    "pillow>=11.2.1",
    "requests>=2.32.3",
    "selenium-wire>=5.1.0",
    "selenium>=4.33.0",
    "trafilatura>=2.0.0",
    "undetected-chromedriver>=3.5.5",
    "yt-dlp>=2025.5.22",
    "cloudscraper>=1.2.71",
    "requests-html>=0.10.0",
    "playwright>=1.52.0",
    "fake-useragent>=2.2.0",
    "pycryptodome>=3.23.0",
    "opencv-python>=4.11.0.86",
    "blinker>=1.9.0",
    "werkzeug>=3.1.3",
    "flask>=3.1.1",
]
